violating_resources/anthos-service-mesh/network-exclusion/samples/restrict-network-exclusions/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nothing-excluded
  labels:
    app: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
