violating_resources/anthos-service-mesh/network-exclusion/samples/restrict-network-exclusions/example_allowed2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-port-and-ip-exclusions
  labels:
    app: nginx
  annotations:
    traffic.sidecar.istio.io/excludeInboundPorts: "80"
    traffic.sidecar.istio.io/excludeOutboundIPRanges: "169.254.169.254/32"
    traffic.sidecar.istio.io/excludeOutboundPorts: "8888"
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
