violating_resources/anthos-service-mesh/network-exclusion/samples/restrict-network-exclusions/example_allowed3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: all-ip-ranges-included-with-one-allowed-ip-excluded
  labels:
    app: nginx
  annotations:
    traffic.sidecar.istio.io/includeOutboundIPRanges: "*" # must be "*" or unset
    traffic.sidecar.istio.io/excludeOutboundIPRanges: "169.254.169.254/32"
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
