violating_resources/anthos-service-mesh/network-exclusion/samples/restrict-network-exclusions/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-ip-range-exclusion
  labels:
    app: nginx
  annotations:
    traffic.sidecar.istio.io/excludeOutboundIPRanges: "1.1.2.0/24"
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    - containerPort: 443
