violating_resources/anthos-service-mesh/network-exclusion/samples/restrict-network-exclusions/example_disallowed3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-specific-port-and-ip-inclusions
  labels:
    app: nginx
  annotations:
    # Any of the following trigger a violation.
    # The constraint does not allow the inclusion of specific ports and IPs
    traffic.sidecar.istio.io/includeInboundPorts: "80,443"
    traffic.sidecar.istio.io/includeOutboundPorts: "8888"
    traffic.sidecar.istio.io/includeOutboundIPRanges: "169.254.169.254/32"
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
