violating_resources/anthos-service-mesh/network-exclusion/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: networkexclusions
tests:
  - name: allow-some-exclusions
    template: template.yaml
    constraint: samples/restrict-network-exclusions/constraint.yaml
    cases:
      - name: nothing-excluded
        object: samples/restrict-network-exclusions/example_allowed.yaml
        assertions:
          - violations: no
      - name: allowed-port-and-ip-exclusions
        object: samples/restrict-network-exclusions/example_allowed2.yaml
        assertions:
          - violations: no
      - name: all-ip-ranges-included-with-one-allowed-ip-excluded
        object: samples/restrict-network-exclusions/example_allowed3.yaml
        assertions:
          - violations: no
      - name: allowed-all-ports-and-ip-ranges-included-with-no-exclusions
        object: samples/restrict-network-exclusions/example_allowed4.yaml
        assertions:
          - violations: no
      - name: disallowed-ip-range-exclusion
        object: samples/restrict-network-exclusions/example_disallowed.yaml
        assertions:
          - violations: yes
      - name: one-disallowed-ip-exclusion-and-one-allowed-exclusion
        object: samples/restrict-network-exclusions/example_disallowed2.yaml
        assertions:
          - violations: yes
      - name: disallowed-specific-port-and-ip-inclusions
        object: samples/restrict-network-exclusions/example_disallowed3.yaml
        assertions:
          - violations: yes
